--- a/less/elements/controls.less
+++ b/less/elements/controls.less
@@ -4,6 +4,19 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+}
+
+.scrollable{
+    overflow: auto;
+    -webkit-transition-property: top, bottom;
+    transition-property: top, bottom;
+    -webkit-transition-duration: .2s, .2s;
+    transition-duration: .2s, .2s;
+    -webkit-transition-timing-function: linear, linear;
+    transition-timing-function: linear, linear;
+    -webkit-overflow-scrolling: touch;
 }
 
 .snap-content {
@@ -14,7 +27,7 @@ html, body {
   left: 0;
   width: auto;
   height: auto;
-  z-index: 2;
+  z-index: 3;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   -webkit-transform: translate3d(0, 0, 0);
@@ -46,6 +59,8 @@ html, body {
   padding: 40px;
   overflow: auto;
   background-color: @darkBackground;
+  z-index:2;
+
   -webkit-overflow-scrolling: touch;
   -webkit-transition: width 0.3s ease;
      -moz-transition: width 0.3s ease;
@@ -55,18 +70,19 @@ html, body {
 
   li {
     margin-bottom: 15px;
+
   }
 
 }
 
 .snap-drawer-left {
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .snap-drawer-right {
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .snapjs-left .snap-drawer-right,
@@ -83,7 +99,7 @@ html, body {
 	position: fixed;
 	top: 20px;
 	left: 20px;
-	padding: 10px 8px 5px 15px;
+	padding: 14px 14px 9px 22px;
 	font-size: 20px;
 	z-index: 1000;
 	.transition(~"all 0.3s ease");
@@ -92,4 +108,9 @@ html, body {
 	&.active {
 		left: 286px;
 	}
+}
+
+#content{
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
 }
