--- a/less/elements/slide-content.less
+++ b/less/elements/slide-content.less
@@ -385,7 +385,11 @@ h2 {
 // ==========================================================================
 
 .investors-advisors {
-	margin-top: 5%;
+	margin-top: 80px;
+
+	h3 {
+		font-size: 28px;
+	}
 
 	.split-3 img {
 		margin: auto !important;
@@ -423,6 +427,14 @@ h2 {
 			font-size: 16px;
 			margin: 0;
 			line-height: 130%;
+		}
+	}
+
+	.angellist {
+		margin-top: 40px;
+		
+		p {
+			font-size: 20px !important;
 		}
 	}
 
