--- a/less/elements/slides.less
+++ b/less/elements/slides.less
@@ -18,6 +18,8 @@ section {
 	padding: 100px;
 	color: @white;
 	.border-radius(3px);
+	-webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
 }
 
 .auto {
